k8s.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${NAME}
  labels:
    app: ${NAME}
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ${NAME}
  template:
    metadata:
      labels:
        app: ${NAME}
    spec:
      containers:
      - name: ${NAME}
        image: ${IMAGE}:3.31.5
        imagePullPolicy: Always
        ports:
        - containerPort: 2368
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${NAME}-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: zerossl-prod
  labels:
    "use-cloudflare-solver": "true"
spec:
  rules:
  - host: "matthewgall.com"
    http:
      paths:
      - path: /
        backend:
          serviceName: ${NAME}
          servicePort: http
  - host: "www.matthewgall.com"
    http:
      paths:
      - path: /
        backend:
          serviceName: ${NAME}
          servicePort: http
  tls:
  - hosts:
    - 'matthewgall.com'
    - 'www.matthewgall.com'
    secretName: ${NAME}-cert
---
apiVersion: v1
kind: Service
metadata:
  name: ${NAME}
spec:
  ports:
  - name: http
    targetPort: 2368
    port: 80
  selector:
    app: ${NAME}
